// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortSelect render reverse sort select 1`] = `
<div
  className="sort-select"
>
  <div
    className="sort-select__title"
  >
    SORT:
  </div>
  <div
    className="sort-select__field-wrapper"
  >
    <div
      className="select sort-select__field css-2b097c-container"
      onKeyDown={[Function]}
    >
      <div
        className="select__control css-yk16xz-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="select__value-container css-1hwfws3"
        >
          <div
            className="select__placeholder css-1wa3eu0-placeholder"
          >
            Select...
          </div>
          <input
            className="css-62g3xt-dummyInput"
            disabled={false}
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="select__indicators css-1wy0on6"
        >
          <span
            className="select__indicator-separator css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="select__dropdown-arrow select__dropdown-arrow--down"
              color="inherit"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 10 5"
              width="1em"
            >
              <path
                d="M1 1.16134L4.92334 4.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
              <path
                d="M8.82812 1.16134L5 4.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="select__dropdown-arrow select__dropdown-arrow--up"
              color="inherit"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 10 5"
              width="1em"
            >
              <path
                d="M1 3.83866L4.92334 0.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
              <path
                d="M8.82812 3.83866L5 0.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <svg
      aria-hidden="true"
      className="sort-select__icon sort-select__icon--reverse"
      color="inherit"
      focusable="false"
      height="1em"
      onClick={[Function]}
      role="presentation"
      viewBox="0 0 16 14"
      width="1em"
    >
      <g
        fill="currentColor"
        stroke="none"
        strokeWidth="1"
      >
        <g
          transform="translate(-1383.000000, -185.000000)"
        >
          <g
            transform="translate(1087.000000, 169.000000)"
          >
            <g
              transform="translate(296.000000, 16.000000)"
            >
              <rect
                height="1"
                rx="0.4895163"
                width="7.78365217"
                x="8.01085217"
                y="2.353442"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="5.8377113"
                x="8.01085217"
                y="5.290502"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="3.89181217"
                x="8.01085217"
                y="8.22766"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="1.94590609"
                x="8.01085217"
                y="11.16472"
              />
              <path
                d="M2.85056,13.92804 C2.94554435,14.02394 3.09984696,14.02401 3.1949287,13.92818 L5.98018783,11.12216 C6.07507478,11.02654 6.07503304,10.87163 5.98008348,10.77608 L5.68895304,10.48313 C5.59389913,10.38751 5.43977043,10.38758 5.34480696,10.48334 L3.47919304,12.3641 L3.47919304,0.2447585 C3.47919304,0.1095822 3.37029565,-1.139453e-08 3.23595826,0 L2.80937043,3.618335e-08 C2.67503304,4.757781e-08 2.56613565,0.1095822 2.56613565,0.2447585 L2.5661287,12.3641 L0.706685218,10.48383 C0.611766261,10.38786 0.457431652,10.38765 0.36227687,10.48341 L0.0712431306,10.77629 C-0.0236404172,10.87177 -0.0237631303,11.02654 0.070968348,11.12216 L2.85056,13.92804 Z"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`SortSelect render sort select 1`] = `
<div
  className="sort-select"
>
  <div
    className="sort-select__title"
  >
    SORT:
  </div>
  <div
    className="sort-select__field-wrapper"
  >
    <div
      className="select sort-select__field css-2b097c-container"
      onKeyDown={[Function]}
    >
      <div
        className="select__control css-yk16xz-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="select__value-container css-1hwfws3"
        >
          <div
            className="select__placeholder css-1wa3eu0-placeholder"
          >
            Select...
          </div>
          <input
            className="css-62g3xt-dummyInput"
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="select__indicators css-1wy0on6"
        >
          <span
            className="select__indicator-separator css-1okebmr-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="select__dropdown-arrow select__dropdown-arrow--down"
              color="inherit"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 10 5"
              width="1em"
            >
              <path
                d="M1 1.16134L4.92334 4.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
              <path
                d="M8.82812 1.16134L5 4.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="select__dropdown-arrow select__dropdown-arrow--up"
              color="inherit"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 10 5"
              width="1em"
            >
              <path
                d="M1 3.83866L4.92334 0.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
              <path
                d="M8.82812 3.83866L5 0.5"
                stroke="currentColor"
                strokeLinecap="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <svg
      aria-hidden="true"
      className="sort-select__icon"
      color="inherit"
      focusable="false"
      height="1em"
      onClick={[Function]}
      role="presentation"
      viewBox="0 0 16 14"
      width="1em"
    >
      <g
        fill="currentColor"
        stroke="none"
        strokeWidth="1"
      >
        <g
          transform="translate(-1383.000000, -185.000000)"
        >
          <g
            transform="translate(1087.000000, 169.000000)"
          >
            <g
              transform="translate(296.000000, 16.000000)"
            >
              <rect
                height="1"
                rx="0.4895163"
                width="7.78365217"
                x="8.01085217"
                y="2.353442"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="5.8377113"
                x="8.01085217"
                y="5.290502"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="3.89181217"
                x="8.01085217"
                y="8.22766"
              />
              <rect
                height="1"
                rx="0.4895163"
                width="1.94590609"
                x="8.01085217"
                y="11.16472"
              />
              <path
                d="M2.85056,13.92804 C2.94554435,14.02394 3.09984696,14.02401 3.1949287,13.92818 L5.98018783,11.12216 C6.07507478,11.02654 6.07503304,10.87163 5.98008348,10.77608 L5.68895304,10.48313 C5.59389913,10.38751 5.43977043,10.38758 5.34480696,10.48334 L3.47919304,12.3641 L3.47919304,0.2447585 C3.47919304,0.1095822 3.37029565,-1.139453e-08 3.23595826,0 L2.80937043,3.618335e-08 C2.67503304,4.757781e-08 2.56613565,0.1095822 2.56613565,0.2447585 L2.5661287,12.3641 L0.706685218,10.48383 C0.611766261,10.38786 0.457431652,10.38765 0.36227687,10.48341 L0.0712431306,10.77629 C-0.0236404172,10.87177 -0.0237631303,11.02654 0.070968348,11.12216 L2.85056,13.92804 Z"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
